# hackathon-MIT_MCP-OR

./: .gitignore  README.md  calculate_means.py  claude_desktop_config.json  csv_editor.py  hackaton.py  index.html  main.py  normalize_routes.py  pyproject.toml  script.js  send_to_claude.py  send_to_claude.sh  solver.py  styles.css  test.py
data/: README.md  airplane_routes.csv  cities.csv  out.geojson  port_routes.csv  road_routes.csv  roads.csv  routes copy.csv  routes.csv  routes_clean copy.csv  routes_clean.csv  ship_routes.csv  train_routes.csv
data/intermediary/: airplane_routes.csv  out-temp.geojson  port_routes-temp.csv  road_routes copy.csv  road_routes.csv  train_routes2.csv
data/raw/: airplane_routes.csv  cities.csv  road_routes.csv
src/data_preprocess/: add_city.py  get_roads.py  pipeline.py  todo.md
src/data_preprocess/searoute/: searoute.bat
src/data_preprocess/utils/: add_CO2_price.py  add_city.py  add_train_line.py  get_lat_long.py  get_maritime_routes.py  get_roads.py  json_to_maritime.py  out_to_roads.py
