[project]
name = "hackathon_mit_uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "geopy>=2.4.1",
    "gurobipy>=12.0.1",
    "mcp[cli]>=1.7.1",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]
